--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -1,4 +1,4 @@
-@import "vars"; 
+@import 'vars'; 
 
 * {
   // box model
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 
   // font
-  // font-family: $font-primary;
+  font-family: $font-primary;
   font-size: 1em;
   font-weight: normal;
   font-style: normal;
@@ -19,7 +19,7 @@
   white-space: normal;
 
   // color
-  background: none;
+  background: $color-white;
   color: $color-black;
 
   // other
