--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,21 +1,19 @@
-@import url('https://fonts.googleapis.com/css?family=Acme|Shadows+Into+Light"');
+
+$color-brand-blue: rgb(15, 117, 118);
+$color-brand-green: rgb(11, 148, 68);
+
+$color-button-focus: rgb(15, 187, 87);
 
 $color-error: #ff0000;
-$color-secondary: #F0DCB6;
-$color-primary: #ff777a;
-$color-success: #77ff7a;
-$color-white: #fff;
-$color-black: #000;
+
 $color-lightgrey: #B5BAC3;
 $color-grey: #7A7D84;
 $color-darkgrey: #6E7177;
-$color-darkcyan: #008b8b;
+
+$color-black: #000;
+$color-white: #fff;
 
 $pad: 0.5em;
 
-$acme-font: 'Acme', sans-serif;
-$shadow-font: 'Shadows Into Light', cursive;
-$font-primary: 'Lato', sans-serif;
-$font-secondary: 'Roboto Mono', monospace;
-
-$bg-texture: url("https://www.transparenttextures.com/patterns/bedge-grunge.png");
+$font-primary: 'Proxima Nova', Helvetica, Arial, sans-serif;
+$font-secondary: 'Adobe Garamond Pro', serif;
