--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,8 +1,10 @@
+@import '../../style/vars';
+
 .navbar {
   top: 0;
   position: fixed;
   width: 100%;
-  background-color: black;
+  background-color: $color-darkgrey;
   padding: 0;
 
   .logo {
