--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,7 +4,7 @@
   top: 0;
   position: fixed;
   width: 100%;
-  background-color: $color-darkgrey;
+  background-color: #1f1f1f;
   padding: 0;
 
   .logo {
