--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -3,7 +3,7 @@
 * {
   // box model
   position: static;
-  // display: block; TODO: uncomment this!
+  display: block; 
   margin: 0;
   padding: 0;
   border: none;
