--- a/src/components/point-tracker-table/point-tracker-table.scss
+++ b/src/components/point-tracker-table/point-tracker-table.scss
@@ -1,11 +1,12 @@
 .point-table {
-  margin: 3em;
-  display: flex;
-  justify-content: space-evenly;
-  border: 1px solid black;
+  // margin: 3em;
+  // display: flex;
+  // justify-content: space-evenly;
+  // border: 1px solid black;
   
   .labels {
     width: 6em;
+    font-size: 12px;
     text-align: right;
   }
 
@@ -25,7 +26,14 @@
 }
 
 .column {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
+  font-size: 15px;
+}
+
+.data-entry {
+  display: block;
+  // padding-top: 5em;
+}
+
+.synopsis {
+  padding-top: 5em;
 }
