--- a/src/components/point-tracker-table/point-tracker-table.scss
+++ b/src/components/point-tracker-table/point-tracker-table.scss
@@ -1,8 +1,6 @@
 .point-table {
-  margin: 3em;
-  display: flex;
-  justify-content: space-evenly;
-  border: 1px solid black;
+  // display: flex;
+  // justify-content: space-evenly;
   
   .labels {
     width: 6em;
@@ -25,7 +23,7 @@
 }
 
 .column {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
+  // display: flex;
+  // justify-content: space-evenly;
+  // flex-direction: column;
 }
