updates mentor-table connection to state; updates font

--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,900');
 
 $color-brand-blue: rgb(15, 117, 118);
 $color-brand-green: rgb(11, 148, 68);
@@ -15,5 +16,5 @@ $color-white: #fff;
 
 $pad: 0.5em;
 
-$font-primary: 'Proxima Nova', Helvetica, Arial, sans-serif;
+$font-primary: 'Raleway', Helvetica, Arial, sans-serif;
 $font-secondary: 'Adobe Garamond Pro', serif;
