--- a/src/components/whitelist/whitelist.scss
+++ b/src/components/whitelist/whitelist.scss
@@ -12,8 +12,8 @@
   background-color: #fefefe;
   margin: auto;
   padding: 20px;
-  border: 1px solid #888;
   width: 80%;
+  border-radius: 0.4em;
 }
 
 .modal-background {
