--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,8 +4,10 @@
   top: 0;
   position: fixed;
   width: 100%;
+  margin: 0px 0px 20px 0px;
   background-color: #1f1f1f;
   padding: 0;
+  z-index: 1;
 
   .logo {
     float: left;
