--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,900');
 
-$color-brand-blue: rgb(15, 117, 118);
+$color-brand-blue: rgb(17, 134, 180);
 $color-brand-green: rgb(11, 148, 68);
 
 $color-button-focus: rgb(15, 187, 87);
 
+$color-input-field: #59AACE;
+$color-input-focus: #A1CEE4;
+
 $color-error: #ff0000;
 
 $color-lightgrey: #B5BAC3;
-$color-grey: #7A7D84;
 $color-darkgrey: #6E7177;
 
 $color-black: #000;
