--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -41,7 +41,7 @@ label {
   margin-bottom: $pad;
 }
 
-textarea, input {
+textarea, input, select {
   background: $color-input-field;
   // border: none;
   padding: 15px;
