--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -11,3 +11,23 @@
       color: $color-brand-blue;
       padding-bottom: .5em;
     }
+
+    .submit-report{
+      background: $color-button-green;
+      padding: $pad;
+      border: 1px solid;
+      border-radius: 3px;
+      font-family: $font-primary;
+      font-weight: bold;
+      color: $color-black;
+      font-size: 16px;
+
+      &:hover {
+        background: $color-button-focus;
+        color: $color-black;
+      }
+  
+      &:visited {
+        background: $color-button-active;
+    }
+  }
