--- a/src/components/point-tracker-table/point-tracker-table.scss
+++ b/src/components/point-tracker-table/point-tracker-table.scss
@@ -1,3 +1,5 @@
+@import '../../style/vars';
+
 .point-table {
   
   .labels {
@@ -35,3 +37,5 @@
   padding-top: 5em;
   padding-bottom: 5em;
 }
+
+
