--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,900');
 
-$color-brand-blue: rgb(17, 134, 180);
-$color-brand-green: rgb(11, 148, 68);
+$color-brand-blue: #1186B4;
+$color-brand-green: #0B9444;
 
-$color-button-focus: rgb(15, 187, 87);
+$color-button-green: #0B9444;
+$color-button-focus: #53B57D;
+$color-button-active: #83CBA3;
 
 $color-input-field: #59AACE;
 $color-input-focus: #A1CEE4;
