changes table font size and alignment

--- a/src/components/point-tracker-table/point-tracker-table.scss
+++ b/src/components/point-tracker-table/point-tracker-table.scss
@@ -4,7 +4,7 @@
   
   .labels {
     width: 10em;
-    font-size: 14px;
+    font-size: 12px;
     text-align: right;
   }
 
@@ -24,7 +24,8 @@
 }
 
 .row-labels {
-  font-size: 12px;
+  font-size: 14px;
+  padding-left: .1em;
 }
 
 
