--- a/src/components/subject-column/subject-column.scss
+++ b/src/components/subject-column/subject-column.scss
@@ -1,1 +1,9 @@
 @import '../../style/vars';
+
+.column-rows{
+  display: inline-block;
+  height: 3em;
+  width: 5em;
+  padding: .5em;
+  margin: .2em;
+}
