--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -7,12 +7,13 @@
   display: inline-block;
   padding: 10px;
   margin: 10px;
+  vertical-align: middle;
 }
 
 .survey-questions input,
 .survey-questions label {
   display: inline-block;
-  margin-right: 1;
+  margin-right: 1px;
 }
 
 .survey-questions label {
@@ -33,6 +34,10 @@
       padding-bottom: .5em;
     }
 
+    h4 {
+      padding-top: 1em;
+    }
+
     .submit-report{
       background: $color-button-green;
       padding: $pad;
@@ -51,4 +56,15 @@
       &:visited {
         background: $color-button-active;
     }
+
+  }
+  
+  .synopsis {
+    padding-top: 2.5em;
+    padding-bottom: 1.6em;
+  }
+
+  .synopsis h4 {
+    // padding-top: 1em;
+    padding-bottom: 1.6em;
   }
