initial checkout from noah's branch

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -38,7 +38,7 @@
   }
 }
 
-.navbar button {
+button {
   background-color: transparent !important;
   float: right;
   padding: 1.8em 0.8em !important;
