--- a/src/components/subject-column/subject-column.scss
+++ b/src/components/subject-column/subject-column.scss
@@ -1,9 +1,11 @@
 @import '../../style/vars';
 
-.column-rows{
+.column-rows {
   display: inline-block;
   height: 3em;
   width: 5em;
   padding: .5em;
   margin: .2em;
+  text-align: center;
+  font-size: 16px;
 }
