--- a/src/components/table-menu/table-menu.scss
+++ b/src/components/table-menu/table-menu.scss
@@ -1,9 +1,6 @@
 .table-menu {
-  position: relative;
-  left: 15em;
-  top: 4.5em;
-  margin-left: auto;
-  margin-right: auto;
+  top: 4.7em;
+  position:relative;
 }
 
 .table-menu-btn {
@@ -11,11 +8,16 @@
   background: white;
   border: 1px solid rgb(29, 164, 29);
   color: rgb(29, 164, 29);
-  margin-right: .1em;
+  margin-left: 2px;
   width: 8em;
 }
 
 .table-menu-btn:hover {
+  background: rgb(29, 164, 29);
+  color: white;
+}
+
+.table-menu-btn:active {
   background: rgb(29, 164, 29);
   color: white;
 }
