--- a/src/components/table-menu/table-menu.scss
+++ b/src/components/table-menu/table-menu.scss
@@ -6,18 +6,20 @@
 .table-menu-btn {
   float: left;
   background: white;
-  border: 1px solid rgb(29, 164, 29);
-  color: rgb(29, 164, 29);
+  border: 1px solid #42914d;
+  color: #42914d;
+  text-shadow: 0px 0px 3px rgb(230, 230, 230);
   margin-left: 2px;
   width: 8em;
 }
 
 .table-menu-btn:hover {
-  background: rgb(29, 164, 29);
+  background: #42914d;
   color: white;
+  text-shadow: 0px 0px 3px #326f3a;
 }
 
 .table-menu-btn:active {
-  background: rgb(29, 164, 29);
+  background: #42914d;
   color: white;
 }
