adding trash icon to subject columns

--- a/src/components/subject-column/subject-column.scss
+++ b/src/components/subject-column/subject-column.scss
@@ -1,5 +1,12 @@
 @import '../../style/vars';
 
+svg > path {
+  fill: black;
+}
+
+.svg-inline--fa.fa-w-10 {
+    width: 2em;
+}
 .column-rows {
   display: inline-block;
   height: 3em;
