working on survey-questions placement

--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -17,25 +17,45 @@
       }
 }
 
+.survey-questions {
+  display: inline-block;
+  width: 50%;
+
+}
+
+.survey-questions-2 {
+  display: inline-block;
+  width: 50%;
+  // margin-left: 2px;
+  // float: left;
+}
+
+.survey-question-container {
+  width: 100%;
+  clear: both;
+}
 
 .survey-questions input,
-.survey-questions label {
+.survey-questions label,
+.survey-questions-2 input,
+.survey-questions-2 label, {
+  float: left;
   display: inline-block;
-  margin-right: 1px;
+  // margin-right: 4px;
 }
 
 .survey-questions label {
-  // display: inline-block;
+  display: inline-block;
   margin-bottom: 0;
   margin-left: 10px; 
   vertical-align: middle; 
 }
 
 
-    .points-tracker {
+.points-tracker {
       padding-top: 20px;
       margin: 80px 20px 0 20px;
-    }
+}
  
 
     h2 {
@@ -79,6 +99,17 @@ ul {
       display: inline-block;
       padding: 10px;
     }
+
+    // .survey-quesitons {
+    //     -moz-column-count: 5;
+    //     -moz-column-gap: 20px;
+    //     -webkit-column-count: 5;
+    //     -webkit-column-gap: 20px;
+    //     column-count: 5;
+    //     column-gap: 20px;
+    
+    // }
+    
   }
 
   h2 {
