--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -26,10 +26,9 @@
     .dropdown {
       display: block;
       position: absolute;
-      background-color: lightgray;
-      top: 4.7em;
+      background-color: #929292;
+      top: 4.8em;
       right: 0;
-      width: 11em;
     }
 
     .google-btn {
@@ -39,17 +38,17 @@
   }
 }
 
-button {
-  background-color: transparent;
-  float: right;
-  padding: 1.8em 0.8em !important;
-  margin-left: 1em;
-}
-
-.login > .button {
+.login button {
   color: white;
+  background-color: transparent;
+  padding: 1.8em 1em !important;
 }
 
-.dropdown > .button {
-  margin-right: 2em;
+.login button:hover {
+  background-color: #4a4a4a;
+}
+
+.dropdown > button {
+  width: 11.9em;
+  color: black;
 }
