--- a/src/components/dashboard/_dashboard.scss
+++ b/src/components/dashboard/_dashboard.scss
@@ -2,3 +2,23 @@
   margin: 1em;
   margin-top: 6em;
 }
+
+.nav {
+  z-index: 2;
+  color: white;
+  float: right;
+  margin-right: 30em;
+}
+.nav > a {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  padding: 1.8em 2em;
+}
+
+.nav > a:hover {
+  background-color: #4a4a4a;
+}
+.nav > a:nth-child(1) {
+  margin-left: 8em;
+}
