--- a/src/components/point-tracker-table/point-tracker-table.scss
+++ b/src/components/point-tracker-table/point-tracker-table.scss
@@ -1,9 +1,11 @@
 @import '../../style/vars';
 
 .point-table {
+  border: 1px solid black;
+  width: 60%;
   
   .labels {
-    width: 10em;
+    width: 20em;
     font-size: 12px;
     text-align: right;
   }
@@ -16,17 +18,25 @@
 
   * {
     display: inline-block;
-    height: 3em;
+    height: 70%;
     width: 5em;
     padding: .5em;
     margin: .2em;
   }
 }
 
+.new-subject {
+  // float: center;
+  display: inline-block;
+}
+
 .row-labels {
   font-size: 14px;
   padding-left: .1em;
   text-align: center;
+  margin: 80px 0px;
+  border: black;
+  
 }
 
 
