changed row label size to match input lines

--- a/src/components/point-tracker-table/point-tracker-table.scss
+++ b/src/components/point-tracker-table/point-tracker-table.scss
@@ -31,10 +31,10 @@
 }
 
 .row-labels {
-  font-size: 14px;
+  font-size: 9.7px;
   padding-left: .1em;
   text-align: center;
-  margin: 80px 0px;
+  // margin: 80px 0px;
   border: black;
   
 }
