--- a/src/components/mentor-table/mentor-table.scss
+++ b/src/components/mentor-table/mentor-table.scss
@@ -554,8 +554,8 @@
 
 .updateBtn {
   background: white;
-  border: 1px solid rgb(118, 144, 233);
-  color: rgb(16, 62, 211);
+  border: 1px solid #59AACE;
+  color: #1186B4;
   font-size: 14px;
   position: relative;
   text-shadow: rgb(206, 206, 206);
@@ -563,9 +563,9 @@
 }
 
 .updateBtn:hover {
-  background-color: rgb(16, 62, 211);
+  background-color: #1186B4;
   color: white;
-  border: 1px solid rgb(16, 62, 211);
+  border: 1px solid r#1186B4;
 }
 
 .tools > button {
