--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -1,27 +1,27 @@
 @import '../../style/vars';
 
-.point-tracker-form {
-}
 .select-student, .select-date {
-
   display: inline-block;
-  float: left;
   padding: 5px;
-  // margin: 10px;
-  // vertical-align: middle;
 
     select, input {
+      background-color: $color-input-focus;
       display: inline-block;
+      // border: 1px solid $color-brand-blue;
       width: 180px;
       height: 3em;
       padding: 10px;
       }
 }
 
+.survey-question-container {
+  width: 100%;
+  clear: both;
+}
+
 .survey-questions {
   display: inline-block;
   width: 50%;
-
 }
 
 .survey-questions-2 {
@@ -31,17 +31,12 @@
   // float: left;
 }
 
-.survey-question-container {
-  width: 100%;
-  clear: both;
-}
-
 .survey-questions input,
 .survey-questions label,
 .survey-questions-2 input,
 .survey-questions-2 label, {
   float: left;
-  display: inline-block;
+  // display: inline;
   margin-right: 4px;
 }
 
@@ -66,6 +61,14 @@
       padding-top: 1em;
     }
 
+    ul {
+      li {
+        list-style-type: none;
+        display: inline-block;
+        padding: 10px;
+      }
+    }
+
     .submit-report{
       background: $color-button-green;
       padding: $pad;
@@ -85,28 +88,14 @@
         background: $color-button-active;
     }
 
-  }
 
   .synopsis {
     padding-top: 2.5em;
     padding-bottom: 1.6em;
   }
 
-ul {
-    li {
-      list-style-type: none;
-      display: inline-block;
-      padding: 10px;
-    }
-  }
-
-  h2 {
-    color: $color-brand-blue;
-    padding-bottom: .5em;
-    }
-
-
   .synopsis h4 {
     // padding-top: 1em;
     padding-bottom: 1.6em;
   }
+}
