--- a/src/components/point-tracker-table/point-tracker-table.scss
+++ b/src/components/point-tracker-table/point-tracker-table.scss
@@ -51,6 +51,11 @@
   padding-bottom: 5em;
 }
 
+.choose-teacher {
+  width: 180px;
+  height: 3em;
+}
+
 .add-subject-btn {
   background-color: $color-white;
   color: $color-brand-blue;
