--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -49,9 +49,12 @@
 }
 
 .points-tracker {
-      padding-top: 20px;
-      margin: 80px 20px 0 20px;
- 
+  padding-top: 20px;
+  padding-left: 2%;
+  padding-bottom: 2%;
+  margin: 6% 20% 0 20%;
+  border-radius: 30px;
+  border: 2px solid #e8e8e8;
 }
 
     h2 {
