--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -3,7 +3,7 @@
 // content
 html, body {
   max-width:inherit;
-  position: relative; 
+  position: relative;
   font-family: $font-primary;
 }
 
@@ -66,7 +66,7 @@ button {
 
 button,input[type="submit"] {
   font-family: $font-primary;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 footer {
