--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -8,13 +8,20 @@
   padding: 0;
   z-index: 1;
   clear: both;
+  height: 58px;
+
+  .nav-content {
+    max-width: 1366px;
+    margin: auto;
+  }
 
   .logo {
     float: left;
+    margin-top: 0.6em;
 
     .rainier-logo {
       width: 20em;
-      margin: 1em 1em;
+
     }
 
   }
@@ -28,7 +35,6 @@
       position: absolute;
       background-color: #929292;
       top: 4.8em;
-      right: 0;
     }
 
     .google-btn {
@@ -41,7 +47,7 @@
 .login button {
   color: white;
   background-color: transparent;
-  padding: 1.8em 1em !important;
+  margin-top: 1.2em;
 }
 
 .login button:hover {
@@ -51,4 +57,27 @@
 .dropdown > button {
   width: 11.9em;
   color: black;
+}
+
+.nav {
+  z-index: 2;
+  color: white;
+  margin-right: 30em;
+  top: 0;
+  right: 0;
+  float: right;
+}
+.nav > a {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  margin-top: 1.2em;
+}
+
+.nav > a:hover {
+  background-color: #4a4a4a;
+  border-radius: 40px;
+}
+.nav > a:nth-child(1) {
+  margin-left: 8em;
 }
