updated mentor-table for new backend. added routes to routes.js. fixed typo in app.js. added styling to child rows in admin table.

--- a/src/components/mentor-table/mentor-table.scss
+++ b/src/components/mentor-table/mentor-table.scss
@@ -12,6 +12,10 @@
   height: 77vh !important;
 }
 
+.react-grid-Cell.rdg-child-cell {
+  background-color: lightgrey;
+}
+
 .react-grid-Container {
   position: relative;
   top: 3.5em;
