onclick handlers on sidebar

--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -1,13 +1,22 @@
 .panel {
     background-color: white !important;
     border-radius: 6px;
-    /* position: fixed; */
-    /* top: 0; */
-    /* bottom: 0; */
-    /* left: 0; */
     margin-top: 84px;
     margin-left: 1em;
     padding-bottom: 12px;
     z-index: 100;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+
+.mentor-btn {
+  background-color: #A9C94C;
+  font-weight: 600;
+  color: white;
+  text-transform: uppercase;
+  padding: 4px 16px;
+  border-radius: 20px;
+
+  float: right;
+  margin-top: -4px;
+  margin-right: 20px;
 }
