--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -49,12 +49,12 @@
 }
 
 .points-tracker {
-  padding-top: 20px;
-  padding-left: 2%;
-  padding-bottom: 2%;
-  margin: 6% 20% 0 20%;
-  border-radius: 30px;
-  border: 2px solid #e8e8e8;
+  // padding-top: 20px;
+  // padding-left: 2%;
+  // padding-bottom: 2%;
+  // margin: 6% 20% 0 20%;
+  // border-radius: 30px;
+  // border: 2px solid #e8e8e8;
 }
 
     h2 {
