--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -20,6 +20,7 @@
   clear: both;
   left: 50%;
   transform: translateX(-50%);
+  padding: 0 !important;
 
   .nav-content {
     margin-left: auto !important;
