--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,900');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,600,600i,700,900|Open+Sans+Condensed:400');
 
 $color-brand-blue: #1186B4;
 $color-brand-green: #0B9444;
@@ -22,3 +22,4 @@ $pad: 0.5em;
 
 $font-primary: 'Raleway', Helvetica, Arial, sans-serif;
 $font-secondary: 'Adobe Garamond Pro', serif;
+$font-condensed: 'Open Sans Condensed', sans-serif;
