--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -11,7 +11,7 @@
 
   // font
   font-family: $font-primary;
-  font-size: 1em;
+  font-size: 12px;
   font-weight: normal;
   font-style: normal;
   text-decoration: none;
