--- a/src/components/connection-modal/connection-modal.scss
+++ b/src/components/connection-modal/connection-modal.scss
@@ -63,26 +63,28 @@ p {
 }
 
 .addButton-container {
-  width: 9em;
+  width: 8em;
   margin-left: auto;
   margin-right: auto;
 }
 
 .addButton {
-  background: #099544;
-  box-shadow: 0px 3px #076e32;
+  display: flex;
+  background-color: #0B9444;
+  // box-shadow: 2px 3px 2px #83CBA3;
   border: none;
-  border-radius: 2em;
+  border-radius: .3em;
   color: white;
   cursor: pointer;
-  width: 9em;
+  width: 10em;
   font-size: 16px;
   font-weight: 300;
-  padding: 12px;
+  margin: 5px 20px;
+  padding: 8px;
 }
 
 .addButton:hover {
-  background-color: #306c39;
+  background-color: #53B57D;
 }
 
 input:focus, button:focus {
