--- a/src/components/student-data-form/student-data-form.scss
+++ b/src/components/student-data-form/student-data-form.scss
@@ -3,17 +3,17 @@ p {
 }
 
 .student-data-form {
-  background: rgba(33, 33, 33, .97);
+  background: rgba(165, 164, 164, 0.97);
   border-radius: 7px;
   box-shadow: 0px 0px 10px rgb(186, 186, 186);
-  width: 30em;
-  height: 32em;
+  width: 50em;
+  // height: 50em;
   color: white;
   font-family: helvetica;
   position: absolute;
   z-index: 99;
   margin: auto;
-  top: 0; left: 0; bottom: 0; right: 0;
+  top: 6em; left: 0; bottom: 0; right: 0;
 }
 
 .hide {
