basic styling tweaks

--- a/src/components/admin-table/admin-table.scss
+++ b/src/components/admin-table/admin-table.scss
@@ -19,6 +19,8 @@
 .react-grid-Container {
   position: relative;
   top: 3.5em;
+  width: 1366px !important;
+  margin: auto !important;
 
 .ReactTable {
   position: relative;
