pt validation working. save prevented with bad scores. scores turn red if invalid

--- a/src/components/subject-column/subject-column.scss
+++ b/src/components/subject-column/subject-column.scss
@@ -20,3 +20,11 @@ svg > path {
 .column data input {
   margin-bottom: 5px;
 }
+
+.invalid-scores {
+  background: red;
+}
+
+.invalid-scores:hover {
+  background: rgb(247, 147, 147)
+}
