--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -1,5 +1,15 @@
 @import '../../style/vars';
 
+.point-tracker-modal {
+    position: absolute;
+    height: 85vh;
+    overflow: scroll;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    box-shadow: 0 0 12px rgba(0,0,0, 0.3);
+}
+
 .select-student, .select-date {
   display: inline-block;
   padding: 5px;
