--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -74,6 +74,10 @@ footer {
   height: 60px;
   border-top: none;
   margin-top: 50px;
+  bottom: 0;
+  width: 100%;
+  margin: auto;
+  position: absolute;
 
   a {
     padding-top: 10px;
