sidebar selected state

--- a/src/components/side-bar/_side-bar.scss
+++ b/src/components/side-bar/_side-bar.scss
@@ -27,6 +27,11 @@
   }
 
   .nav-item:hover {
+    background-color: #bfd4e4;
+    color: white;
+  }
+
+  .selected {
     background-color: #A4C7E3;
     color: white;
   }
